Sun Jan  5 15:52:59 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* boot-9.scm (error-catching-loop): Remove message saying that
	typing "$" will put you in the debugger.  This isn't implemented
	yet.

Sun Dec 22 23:27:25 1996  Jim Blandy  <jimb@floss.cyclic.com>

	* boot-9.scm (delq-all!): Function deleted; delq!'s semantics have
	been fixed, so this function is superfluous.
	(transform-usage-lambda): Use delq!, not delq-all!.

Tue Dec 17 20:36:45 1996  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (resolve-module): New optional parameter that
 	controls whether autoloading is attempted or not. Default is #t.
	(process-define-module): Don't autoload the defined module.
	(try-module-autoload): Don't autoload the directory modules.

	* boot-9.scm (process-define-module): Ensure that the-scm-module
 	is last in the `uses' list to allow shadowing builtin
 	bindings. All :use-module options are added in the order they
 	appear in the arguments but before anything already on the list
 	(such as the-scm-module).

Wed Dec 11 21:06:05 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* slib.scm (slib-parent-dir): throw error if #f returned from
 	%search-load-path.

Sat Nov 30 23:57:28 1996  Tom Tromey  <tromey@cygnus.com>

	* PLUGIN/greet, PLUGIN/split.sed, PLUGIN/this.configure: Removed.
	* Makefile.am, aclocal.m4: New files.
	* configure.in: Updated for Automake.

Wed Nov 27 14:16:14 1996  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (macroexpand-1, macroexpand), slib.scm
 	(slib:features), r4rs.scm (%load-verbosely): "defined?" is now a
 	function, use it accordingly.
	
Thu Nov 21 11:12:10 1996  Jim Blandy  <jimb@floss.cyclic.com>

	It's an "eval closure", not an "eval thunk."  A thunk is a
	function of no arguments.
	* boot-9.scm (module-type): Rename module field.
	(make-module, eval-in-module, make-root-module,
	set-current-module): Uses changed. 
	(module-eval-closure, set-module-eval-closure!,
	root-module-closure): Renamed from module-eval-thunk,